--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h1>Flix Hub</h1>
+    </header>
+
+    <div class="content">
+      <%= yield %>
+    </div>
+
+    <footer>
+      <p>
+        Copyright &copy; 2018-<%= Time.now.year %>
+        <%= link_to 'Andrew Talle','https://andrewtalle.io' %>
+      </p>
+    </footer>
   </body>
 </html>
