--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,12 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <%= link_to image_tag('logo'), root_path %>
-        <ul>
-          <li>
-            <%= link_to 'All Movies', movies_path %>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <%= render "layouts/header"%>
 
     <div class="content">
       <%= yield %>
     </div>
 
-    <footer>
-      <p>
-        Copyright &copy; 2018-<%= Time.now.year %>
-        <%= link_to 'Andrew Talle','https://andrewtalle.io' %>
-      </p>
-    </footer>
+    <%= render "layouts/footer" %>
   </body>
 </html>
