--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,6 +14,6 @@
   </section>
 <% end %>
 
-<section class="button">
+<section class="admin">
    <%= link_to "Add New Movie", new_movie_path, class: "button" %>
 </section>
