--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
         <%= total_gross(movie) %>
       </h3>
       <span class="stars">
-        <%= average_stars(movie)%>
+        <%= render "shared/stars", percent: movie.average_stars_as_percent %>
       </span>
       <p>
         <%= truncate(movie.description, length: 150, separator: ' ') %>
@@ -21,5 +21,5 @@
 <% end %>
 
 <section class="admin">
-   <%= link_to "Add New Movie", new_movie_path, class: "button" %>
+  <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
 </section>
